--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "proengsoft/laravel-jsvalidation": "^4.5"
+        "proengsoft/laravel-jsvalidation": "^4.5",
+        "realrashid/sweet-alert": "^4.0",
+        "yajra/laravel-datatables-oracle": "^9.18"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
