--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravolt/indonesia": "^0.30.0",
         "proengsoft/laravel-jsvalidation": "^4.5",
         "realrashid/sweet-alert": "^4.0",
+        "spatie/laravel-permission": "^5.1",
         "yajra/laravel-datatables-oracle": "^9.18"
     },
     "require-dev": {
