--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravolt/indonesia": "^0.30.0",
+        "maatwebsite/excel": "^3.1",
         "proengsoft/laravel-jsvalidation": "^4.5",
         "realrashid/sweet-alert": "^4.0",
         "spatie/laravel-permission": "^5.1",
